# mealie-curator

./: .bumpversion.cfg  .copier-answers.yml  .flake8  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.copilot/: openapi.json
.devcontainer/: devcontainer.json
src/mealiecurator/: api.py  cli.py  config.py
src/mealiecurator/cli/: app.py  foods.py
tests/: test_config.py
